# epdoptimize

./: package-lock.json  package.json
python/: README.md  pyproject.toml
python/epdoptimize/: __init__.py  bayer_matrix.py  color_helpers.py  diffusion_maps.py  dither.py  find_closest_color.py  replace_colors.py  utilities.py
python/epdoptimize/data/: __init__.py
python/tests/: __init__.py  conftest.py  test_bayer_matrix.py  test_color_helpers.py  test_diffusion_maps.py  test_dither.py  test_find_closest_color.py  test_image_comparison.py  test_integration.py
python/tests/fixtures/: add_quant_error.json  bayer_matrix.json  device_colors.json  diffusion_maps.json  find_closest_color.json  hex_to_rgb.json  image_processing.json  ordered_dither.json  palettes.json  pixel_xy.json  quant_error.json
src/dither/: dither.ts
tests/: generate-fixtures.js  generate-image-fixtures.js
